--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="input">
         <input class="numCartas" type="text" placeholder="Ingresa número de cartas">
-        <button id="draw-button">Draw</button>
-        <button id="sort-button">Sort</button>
+        <button id="draw-button">Repartir</button>
+        <button id="sort-button">Barajar</button>
     </div>
     <div id="cardDeck"> </div>
     <div id="bubbleDeck">
