--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="input">
         <input class="numCartas" type="text" placeholder="Ingresa número de cartas">
         <button id="draw-button">Repartir</button>
-        <button id="sort-button">Barajar</button>
+        <button id="sort-button">Ordenar</button>
     </div>
     <div id="cardDeck"> </div>
     <div id="bubbleDeck">
